Wed Nov 26 13:41:57 1997  Tom Tromey  <tromey@cygnus.com>

	* header-vars.am (NORMAL_INSTALL, PRE_INSTALL, POST_INSTALL,
	NORMAL_UNINSTALL, PRE_UNINSTALL, POST_UNINSTALL): Define as `:',
	not `true'.

	* automake.in (output_yacc_build_rule): Don't overwrite .h file in
	non-ylwrap case.

	* tags.am (ID): Scan lisp files.
	(TAGS): Make tags for lisp files.

Tue Nov 25 14:20:42 1997  Tom Tromey  <tromey@cygnus.com>

	* ltlib.am: Use INSTALL_DATA, not INSTALL_PROGRAM.  From Gord
	Matzigkeit.

Fri Nov 21 15:15:50 1997  Tom Tromey  <tromey@cygnus.com>

	* m4/mingw.m4, m4/cygwin.4m: Argument to AC_TRY_COMPILE is
	function body, not entire function.  From Ian Taylor.

Sat Oct 25 12:39:19 1997  Tom Tromey  <tromey@cygnus.com>

	* automake.in (scan_one_configure_file): Skip empty string for
	Perl 4.  From Assar Westerlund.

	* config.guess, config.sub, texinfo.tex: New versions from FSF.

Fri Oct 24 23:15:09 1997  Tom Tromey  <tromey@cygnus.com>

	* automake.in (output_yacc_build_rule): Use YFLAGS again.
	(handle_yacc_lex_cxx): Error if YACCFLAGS used.

Wed Aug 27 19:26:45 1997  Rob Savoye  <rob@chinadoll.cygnus.com>

	* compile.am: Add suffix rules for ".s.o" and ".S.o" so assembler
	files can be used.
	* libtool.am: Add suffix rules for ".s.lo" and ".S.lo" so assembler
	files can be used.
	* automake.in: Add .S and .s to the standard list of suffixes so
	assembler files can be used.

Fri Oct 24 13:39:01 1997  Tom Tromey  <tromey@cygnus.com>

	* m4/exeext.m4: Require AM_MINGW32.  Check MINGW32 setting.

Thu Oct 23 21:16:28 1997  Tom Tromey  <tromey@cygnus.com>

	* m4/init.m4 (missing_dir): AC_REQUIRE AM_SANITY_CHECK,
	AC_ARG_PROGRAM, and AC_PROG_MAKE_SET.

Tue Oct 21 16:49:36 1997  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_options): Recognize `cygnus'.

Tue Sep  9 17:09:47 1997  Rob Savoye  <rob@chinadoll.cygnus.com>

	* m4/mingw.m4: New file for mingw32 support.
	* m4/exeext.m4: Also check for the mingw32 environment.
