@@ -1,5 +1,10 @@
 Wed Nov 26 13:41:57 1997  Tom Tromey  <tromey@cygnus.com>
 
+	* m4/ccstdc.m4: Don't force AM_PROG_CC_STDC before AC_PROG_CPP.
+	Temporary hack.
+
+	* m4/mktime.m4 (AM_FUNC_MTIME): New version from Paul Eggert.
+
 	* header-vars.am (NORMAL_INSTALL, PRE_INSTALL, POST_INSTALL,
 	NORMAL_UNINSTALL, PRE_UNINSTALL, POST_UNINSTALL): Define as `:',
 	not `true'.
